<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.ethz.inf.vs.a3.SettingsActivity">

    <TextView
        android:id="@+id/settings_text"
        android:text="@string/action_settings"
        android:textSize="20dp"
        android:textColor="#000080"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/server_addr_text"
        android:text="@string/server_address"
        android:textSize="18dp"
        android:layout_below="@+id/settings_text"
        android:layout_marginTop="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/server_addr_edit"
        android:layout_below="@+id/server_addr_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/server_port_text"
        android:text="@string/server_port"
        android:textSize="18dp"
        android:layout_below="@+id/server_addr_edit"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/server_port_edit"
        android:layout_below="@+id/server_port_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save_button"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSave"/>

</RelativeLayout>
