<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/enter_name_text"
        android:text="@string/enter_name"
        android:textSize="20dp"
        android:textColor="#000080"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/join_button"
        android:text="@string/join"
        android:layout_below="@+id/enter_name"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="onClickJoin"/>

    <Button
        android:id="@+id/settings_button"
        android:text="@string/action_settings"
        android:textAllCaps="true"
        android:layout_below="@+id/join_button"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSettings"/>

</RelativeLayout>
